# bithumb-bot

./: .env.example  .gitattributes  .gitignore  .pytest-order.txt  100.txt  AGENTS.md  README.md  backtest.py  backtest2.py  bot.py  codex.patch  main.py  manual-smoke-patch01.sqlite  pipeline.py  prompts.py  pyproject.toml  review.txt  run_patch_diagnostics.sh  run_pipeline.sh  run_pytest_diagnostics.sh  run_remaining_test_results.sh  test.txt  test1.txt  test_new.sqlite
.github/: pull_request_template.md
.github/workflows/: safety-regression.yml
docs/: LIMITED_UNATTENDED_CHECKLIST.md  OPERATIONS_STATE_MACHINE.md  OPERATOR_REPORTING.md  RUNBOOK.md  cash-drift-report.md  config-reference.md  live-fill-stability-hardening.md  live-order-submit-root-cause.md  live-submit-authority.md  live_dry_run_checklist.md  live_incident_runbook.md  lot_first_sizing_migration.md  lot_native_change_checklist.md  lot_native_contract.md  lot_native_invariants.md  order-fill-stability-hardening-audit.md  order-submit-root-risk-report.md  portfolio-allocation-authority.md  pre-merge-checklist.md  refactor_target.md  research-validation.md  residual_inventory_architecture.md  runtime-data-policy.md  runtime-scope.md  storage-layout.md  strategy-plugin-authoring.md  tracked_residue_state_model.md
scripts/: backup_sqlite.sh  bithumb_order_submit_repro.py  check_live_runtime.sh  check_lot_native_authority_residue.sh  check_pytest_duration_inventory.py  check_repo_runtime_artifacts.sh  check_research_e2e_inventory_durations.py  check_research_workload_budget.py  check_strategy_pr_workload_guard.py  codex_pytest_repair_prompt.md  codex_request.txt  collect_live_snapshot.sh  collect_pytest_perf_baseline.py  collect_pytest_perf_baseline.sh  diag_followup.sh  diag_unknown.sh  extract_research_stage_timings.py  full_suite.sh  healthcheck.py  make_failure_packet.sh  mobile_run.sh  notify_ntfy.sh  path_query.py  remote_verify_live.sh  repair_zero_price_sell_ledger.py  run_codex_pipeline.sh  run_codex_pytest_pipeline.sh  run_fast_pr_tests.sh  run_full_pytest_tests.sh  run_lot_native_regression_gate.sh  run_parallel_research_safety_tests.sh  run_research_nightly_tests.sh
src/bithumb_bot/: db.py  (+148 more)
tests/: conftest.py  fakes.py  test_accounting_projection.py  test_accounting_safety.py  test_accounts_v1.py  test_analytics_context.py  test_approved_profile.py  test_approved_profile_exit_policy_contract.py  test_attribution_quality_signals.py  test_backtest_kernel_contract.py  test_backup_sqlite_script.py  test_bithumb_auth_material_policy.py  test_bithumb_execution_modules.py  test_bithumb_fee_evidence_settlement.py  test_bithumb_private_api.py  test_bithumb_throttle.py  test_bootstrap.py  test_canary_non_sma_plugin_architecture.py  test_candle_processing_stability.py  test_canonical_decision.py  test_channel_breakout_research_plugin.py  test_cli_architecture.py  test_cli_structure.py  test_client_order_id.py  test_config_live_db_path_guard.py  test_cost_assumption_contract.py  test_custom_exit_policy_contract.py  test_custom_exit_strategy_plugin.py  test_daily_count_scope.py  test_daily_participation_attribution.py  test_daily_participation_count_provider.py  test_daily_participation_event_contract.py  test_daily_participation_execution_integration.py  test_daily_participation_live_contract.py  test_daily_participation_metrics.py  test_daily_participation_policy.py  test_daily_participation_report.py  test_daily_participation_runtime_adapter.py  test_daily_participation_runtime_feature_snapshot.py  test_daily_participation_runtime_replay_equivalence.py  (+289 more)
tmp/: manual-test.db
tools/: check_pytest_env_safety.py  check_tables.py  cleanup_open_order.py  diagnostic_smoke_backtest.py  make_open_order.py  oms_smoke.py  undiff.py  verify_sqlite_restore.py
(+209 files in other folders)
