[project]
name = "bithumb-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "PyJWT>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[project.scripts]
bithumb-bot = "bithumb_bot.bootstrap:run_cli"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "fast_regression: quick deterministic regression checks for dust, auth, and order-validation behavior",
    "slow_integration: slower live-like or restart/reconcile integration checks",
]
