[project]
name = "bithumb-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "PyJWT>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[project.scripts]
bithumb-bot = "bithumb_bot.bootstrap:run_cli"

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["."]
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"
filterwarnings = [
    "error::jwt.exceptions.InsecureKeyLengthWarning",
]
markers = [
    "fast_regression: quick deterministic regression checks for dust, auth, and order-validation behavior",
    "slow_integration: slower live-like or restart/reconcile integration checks",
    "lot_native_regression_gate: required lot-native authority gate covering SELL authority, dust suppression, partial-fill recovery, and restart/reconcile preservation",
    "slow_research: slower research validation/report checks that are still useful as focused regressions",
    "unit: isolated unit tests without external research execution",
    "contract: payload, hash, gate, and schema contract tests with fake or direct lower-level inputs",
    "integration: multi-module tests expected to stay below E2E runtime",
    "research_kernel: real strategy/backtest kernel tests excluded from default-fast validation",
    "research_e2e: real research backtest pipeline tests",
    "audit_e2e: real research backtest tests with complete external audit binding",
    "walk_forward_e2e: real research walk-forward pipeline tests",
    "parallel_e2e: real serial/parallel research execution comparison tests",
    "nightly: expensive research validation intended for nightly or dedicated pipelines",
    "memory_sensitive: tests that guard memory/resource semantics or order-dependent RSS behavior",
    "resource_guard: deterministic tests for research resource-limit enforcement and reporting",
]
